byteHub: apply new fetures, or articles, implemented tiptap
